@@ -5,7 +5,6 @@
     android:orientation="vertical" >
 
     <TableLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -52,7 +51,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:inputType="text" />
+                android:inputType="textMultiLine"
+                android:lines="4" />
         </TableRow>
     </TableLayout>
 
